Fix code padding so that it is more readable

--- a/web/src/css/custom.css
+++ b/web/src/css/custom.css
@@ -1282,6 +1282,8 @@ html[data-theme='dark'] .navbar-item-twitter:before {
 /* New CSS */
 
 code {
+  padding-top: 2px;
+  padding-bottom: 2px;
   border: 1px solid var(--ifm-hr-border-color);
 }
 
